Use custom title component

--- a/CanvasAssistantBlazor/CanvasAssistantBlazor.Client/Pages/Counter.razor
+++ b/CanvasAssistantBlazor/CanvasAssistantBlazor.Client/Pages/Counter.razor
@@ -1,7 +1,7 @@
 ﻿@page "/counter"
 @rendermode InteractiveWebAssembly
 
-<PageTitle>Counter</PageTitle>
+<CustomTitle Title="Counter" />
 
 <h1>Counter</h1>
 
