--- a/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/Pages/Home.razor
+++ b/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/Pages/Home.razor
@@ -1,10 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<CustomTitle Title="Home" />
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
 
-<CanvasAssistantBlazor.Client.Pages.Counter IncrementAmount="3" />
-
+<Counter IncrementAmount="3" />
