--- a/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/_Imports.razor
+++ b/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using CanvasAssistantBlazor
 @using CanvasAssistantBlazor.Client
 @using CanvasAssistantBlazor.Components
+@using CanvasAssistantBlazor.Client.Pages
