--- a/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/Pages/Weather.razor
+++ b/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/Pages/Weather.razor
@@ -1,7 +1,7 @@
 ﻿@page "/weather"
 @attribute [StreamRendering]
 
-<PageTitle>Weather</PageTitle>
+<CustomTitle Title="Weather" />
 
 <h1>Weather</h1>
 
