updated home page heading and styled
I changed the home page heading from 'hello world' to 'Canvas assistant'.
I added a class of homeTitle to the h1 element for specific styling.
I then linked the app.js stylesheet to the home page.
Inside of app.js I added some styling for .homeTitle.

--- a/CanvasAssistantBlazor/CanvasAssistantBlazor/wwwroot/app.css
+++ b/CanvasAssistantBlazor/CanvasAssistantBlazor/wwwroot/app.css
@@ -49,3 +49,9 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+
+.homeTitle {
+    font-size: 1.25em;
+    color: #e50000;
+    font-weight: bold;
+}
