--- a/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/Pages/Home.razor
+++ b/CanvasAssistantBlazor/CanvasAssistantBlazor/Components/Pages/Home.razor
@@ -1,10 +1,10 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+<link rel="stylesheet" src="CanvasAssistantBlazor/wwwroot/app.css" />
+<h1 class="homeTitle">Canvas Assistant</h1>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+Welcome to your Canvas assistant!
 
 <CanvasAssistantBlazor.Client.Pages.Counter IncrementAmount="3" />
 
